--- a/landscaping.html
+++ b/landscaping.html
@@ -8,7 +8,7 @@
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f9f9f9; padding: 20px;">
 
-    <p style="text-align: center; font-size: 1.2em;">Click to enlarge</p>
+    <p style="text-align: center; font-size: 1.2em;">Work</p>
     <div style="text-align: center;">
         <a href="https://kingfield.net/landscaping.jpg" target="_blank">
             <img src="https://kingfield.net/landscaping.jpg" alt="Landscaping Photo"
