--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
   </header>
   <div style="display: flex; flex: 1;">
     <nav>MENU</nav>
-    <main>
-      <img src="NVR-POST2-20250415_192643.jpg" alt="Live camera view from Kingfield" />
-    </main>
+    <main> 
+  <iframe 
+    src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" 
+    title="Kingfield Weather Dashboard"
+    style="width: 100%; height: 100vh; border: none;">
+  </iframe>
+</main>
     <aside>
       <div>Thought for the Day</div>
       <div>Meme of the Day</div>
