--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
   </header>
   <div style="display: flex; flex: 1;">
     <nav>MENU</nav>
-    <main> 
+   <main style="flex: 1; overflow: auto;">
   <iframe 
     src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" 
+    width="100%" 
+    height="600px" 
+    style="border: none;"
+    loading="lazy"
     title="Kingfield Weather Dashboard"
-    style="width: 100%; height: 100vh; border: none;">
+  >
+    Your browser does not support iframes. 
+    <a href="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" target="_blank" rel="noopener">View the weather dashboard here.</a>
   </iframe>
 </main>
     <aside>
