--- a/index.html
+++ b/index.html
@@ -76,19 +76,16 @@
   <div style="display: flex; flex: 1;">
     <nav>MENU</nav>
     <main>
-      <div class="responsive-iframe">
-        <iframe
-          src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1"
-          title="Kingfield Weather Dashboard"
-          loading="lazy"
-        >
-          Your browser does not support iframes.
-          <a href="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" target="_blank" rel="noopener">
-            View the weather dashboard here.
-          </a>
-        </iframe>
-      </div>
-    </main>
+  <div style="position: relative; width: 100%; max-width: 1000px; height: 500px; margin: 0 auto;">
+    <iframe 
+      src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" 
+      style="width: 100%; height: 100%; border: none;" 
+      loading="lazy">
+        <p>Your browser does not support iframes.</p>
+    </iframe>
+  </div>
+</main>
+
     <aside>
       <div>Thought for the Day</div>
       <div>Meme of the Day</div>
