--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
   </header>
   <div style="display: flex; flex: 1;">
     <nav>MENU</nav>
-    <main>
-  <div style="position: relative; width: 100%; max-width: 1000px; height: 500px; margin: 0 auto;">
+    <main style="padding: 0; margin: 0;">
+  <div style="width: 100%; max-width: 900px; height: 400px; margin: 0 auto; overflow: hidden; box-shadow: 0 0 8px rgba(0,0,0,0.1);">
     <iframe 
       src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" 
       style="width: 100%; height: 100%; border: none;" 
-      loading="lazy">
-        <p>Your browser does not support iframes.</p>
+      loading="lazy"
+      title="Ambient Weather Dashboard">
+      <p>Your browser does not support iframes.</p>
     </iframe>
   </div>
 </main>
-
     <aside>
       <div>Thought for the Day</div>
       <div>Meme of the Day</div>
