--- a/index.html
+++ b/index.html
@@ -75,14 +75,16 @@
   </header>
   <div style="display: flex; flex: 1;">
     <nav>MENU</nav>
-    <main style="padding: 0; margin: 0;">
-  <div style="width: 100%; max-width: 900px; height: 400px; margin: 0 auto; overflow: hidden; box-shadow: 0 0 8px rgba(0,0,0,0.1);">
+    <main>
+  <div style="max-width: 980px; margin: 0 auto;">
     <iframe 
-      src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1" 
-      style="width: 100%; height: 100%; border: none;" 
+      src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1"
+      width="100%" 
+      height="520px" 
+      style="border:none; display:block;"
       loading="lazy"
-      title="Ambient Weather Dashboard">
-      <p>Your browser does not support iframes.</p>
+    >
+      Your browser does not support iframes.
     </iframe>
   </div>
 </main>
