--- a/index.html
+++ b/index.html
@@ -75,18 +75,16 @@
   </header>
   <div style="display: flex; flex: 1;">
     <nav>MENU</nav>
-    <main>
-  <div style="max-width: 980px; margin: 0 auto;">
-    <iframe 
-      src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1"
-      width="100%" 
-      height="520px" 
-      style="border:none; display:block;"
-      loading="lazy"
-    >
-      Your browser does not support iframes.
-    </iframe>
-  </div>
+   <main>
+  <iframe 
+    src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1"
+    width="960" 
+    height="550" 
+    style="border:none; display:block; margin: 0 auto;"
+    loading="lazy"
+  >
+    Your browser does not support iframes.
+  </iframe>
 </main>
     <aside>
       <div>Thought for the Day</div>
