--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
     <nav>MENU</nav>
    <main>
   <iframe 
-    src="https://ambientweather.net/dashboard/844782b6d82dd8f5418087ecfa3073f1"
-    width="960" 
-    height="550" 
-    style="border:none; display:block; margin: 0 auto;"
-    loading="lazy"
-  >
+    src="weather.html"
+    title="Kingfield Weather Dashboard"
+    style="width: 100%; height: 90vh; border: none;">
     Your browser does not support iframes.
   </iframe>
 </main>
