--- a/maine_cost_of_living_2021_2025.html
+++ b/maine_cost_of_living_2021_2025.html
@@ -1,16 +1,94 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cost of Living in Rural Western Maine</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cost of Living in Rural Western Maine (2021–2025)</title>
+  <meta name="description" content="An analysis of the cost of living increases in rural Western Maine from May 2021 to May 2025.">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2em;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1, h2 {
+      color: #005b96;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin: 1em 0;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+    code {
+      background-color: #f4f4f4;
+      padding: 2px 4px;
+      border-radius: 4px;
+    }
+    footer {
+      margin-top: 2em;
+      font-size: 0.9em;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
   <h1>Cost of Living in Rural Western Maine (2021 - 2025)</h1>
+
   <p>This page tracks page visits invisibly using counterapi.dev.</p>
+  <img src="https://counterapi.dev/count/incr/bare/costofliving?amount=1" alt="" style="display:none;">
 
-  <!-- Hidden counter script -->
-  <img src="https://counterapi.dev/api/kingfieldnet/costofliving/incr" style="display:none" alt="">
+  <p>From May 2021 to May 2025, the overall <strong>cost of living in rural Western Maine</strong>—including communities such as Kingfield, New Vineyard, and others more aligned with Bangor than Portland—has increased significantly.</p>
 
+  <table>
+    <thead>
+      <tr>
+        <th>Category</th>
+        <th>Estimated Cost Increase</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Groceries</td>
+        <td>+23%</td>
+      </tr>
+      <tr>
+        <td>Electricity</td>
+        <td>+38%</td>
+      </tr>
+      <tr>
+        <td>Fuel Oil</td>
+        <td>+46%</td>
+      </tr>
+      <tr>
+        <td>Propane</td>
+        <td>+35%</td>
+      </tr>
+      <tr>
+        <td>Auto Fuel</td>
+        <td>+33%</td>
+      </tr>
+      <tr>
+        <td>Property Tax</td>
+        <td>+9%</td>
+      </tr>
+      <tr>
+        <td>Overall Estimated Increase</td>
+        <td><strong>~27%</strong></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <footer>
+    <p>Prepared in May 2025. This is a public summary based on living data in rural Western Maine. If you would like to cite this information, please credit <code>kingfield.net</code>.</p>
+  </footer>
 </body>
 </html>
