--- a/maine_cost_of_living_2021_2025.html
+++ b/maine_cost_of_living_2021_2025.html
@@ -1,94 +1,65 @@
-<!DOCTYPE html>
+
+<!DOCTYPE html>More actions
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cost of Living in Rural Western Maine (2021–2025)</title>
-  <meta name="description" content="An analysis of the cost of living increases in rural Western Maine from May 2021 to May 2025.">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 2em;
-      line-height: 1.6;
-      color: #333;
-    }
-    h1, h2 {
-      color: #005b96;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin: 1em 0;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    code {
-      background-color: #f4f4f4;
-      padding: 2px 4px;
-      border-radius: 4px;
-    }
-    footer {
-      margin-top: 2em;
-      font-size: 0.9em;
-      color: #555;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cost of Living in Rural Western Maine (2021–2025)</title>
+    <meta name="description" content="An analysis of the cost of living increases in rural Western Maine from May 2021 to May 2025.">
+    <style>
+        body { font-family: Arial, sans-serif; margin: 2em; line-height: 1.6; color: #333; }
+        h1, h2 { color: #005b96; }
+        table { border-collapse: collapse; width: 100%; margin: 1em 0; }
+        th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+        code { background-color: #f4f4f4; padding: 2px 4px; border-radius: 4px; }
+        footer { margin-top: 2em; font-size: 0.9em; color: #555; }
+    </style>
 </head>
 <body>
-  <h1>Cost of Living in Rural Western Maine (2021 - 2025)</h1>
 
-  <p>This page tracks page visits invisibly using counterapi.dev.</p>
-  <img src="https://counterapi.dev/count/incr/bare/costofliving?amount=1" alt="" style="display:none;">
+<h1>Cost of Living in Rural Western Maine (May 2021 – May 2025)</h1>
 
-  <p>From May 2021 to May 2025, the overall <strong>cost of living in rural Western Maine</strong>—including communities such as Kingfield, New Vineyard, and others more aligned with Bangor than Portland—has increased significantly.</p>
+<p>From May 2021 to May 2025, the overall <strong>cost of living in rural Western Maine</strong>—including communities such as Kingfield, New Vineyard, and others more aligned with Bangor than Portland—<strong>increased by approximately 18%</strong>. This reflects national inflation trends combined with the unique cost pressures in rural regions of the state.</p>
 
-  <table>
+<table>
     <thead>
-      <tr>
-        <th>Category</th>
-        <th>Estimated Cost Increase</th>
-      </tr>
+        <tr>
+            <th>Category</th>
+            <th>Estimated Cost Increase</th>
+        </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Groceries</td>
-        <td>+23%</td>
-      </tr>
-      <tr>
-        <td>Electricity</td>
-        <td>+38%</td>
-      </tr>
-      <tr>
-        <td>Fuel Oil</td>
-        <td>+46%</td>
-      </tr>
-      <tr>
-        <td>Propane</td>
-        <td>+35%</td>
-      </tr>
-      <tr>
-        <td>Auto Fuel</td>
-        <td>+33%</td>
-      </tr>
-      <tr>
-        <td>Property Tax</td>
-        <td>+9%</td>
-      </tr>
-      <tr>
-        <td>Overall Estimated Increase</td>
-        <td><strong>~27%</strong></td>
-      </tr>
+        <tr><td>Housing (Rent & Utilities)</td><td>≈25%</td></tr>
+        <tr><td>Food (Groceries)</td><td>≈22%</td></tr>
+        <tr><td>Transportation (Gas & Maintenance)</td><td>≈12%</td></tr>
+        <tr><td>Healthcare</td><td>≈10%</td></tr>
+        <tr><td>Miscellaneous Goods & Services</td><td>≈15%</td></tr>
+        <tr><th>Overall Cost of Living</th><th>≈18%</th></tr>
     </tbody>
-  </table>
+</table>
 
-  <footer>
-    <p>Prepared in May 2025. This is a public summary based on living data in rural Western Maine. If you would like to cite this information, please credit <code>kingfield.net</code>.</p>
-  </footer>
+<h2>Housing (Rent & Utilities)</h2>
+<p>Housing costs rose significantly, with <strong>rents increasing approximately 20–22%</strong> and <strong>utility costs rising as much as 37%</strong> over four years. Electricity prices in New England are roughly 40% higher than in 2021, and fuel oil—commonly used in rural Maine—saw extreme spikes in 2022. While utility rate hikes moderated by 2024, prices remain elevated. The combined effect makes housing-related costs about <strong>25% higher</strong> than in 2021.</p>
+
+<h2>Food (Groceries)</h2>
+<p>Grocery prices rose about <strong>22%</strong> during this period. Key contributors included meat, dairy, and egg price spikes in 2022. National inflation in food-at-home reached 11–12% in 2022 alone. Although food inflation cooled in 2024–2025, price levels remain high. Rural Maine follows national trends due to shared supply chains, so even small-town grocery bills increased substantially.</p>
+
+<h2>Transportation</h2>
+<p>Transportation costs rose about <strong>12%</strong>, a combination of gasoline prices being about 5–10% higher in 2025 compared to 2021 (after spiking in 2022 and falling back), and vehicle maintenance costs rising roughly 35% over four years due to labor shortages and supply issues. Vehicle ownership remains essential in rural areas, making these increases significant for household budgets.</p>
+
+<h2>Healthcare</h2>
+<p>Healthcare expenses increased approximately <strong>10%</strong>, driven by modest rises in medical service costs (2–3% per year), stable or slightly declining prescription drug prices, and steady increases in insurance premiums. Overall, healthcare inflation was lower than in most other categories.</p>
+
+<h2>Miscellaneous Goods & Services</h2>
+<p>This category, which includes clothing, furniture, personal care, education, and insurance, increased by about <strong>15%</strong> overall. Highlights include auto insurance premiums rising sharply (+30% or more), household goods like furniture and appliances experiencing double-digit inflation, and personal services such as haircuts and veterinary care becoming 15–20% more expensive.</p>
+
+<h2>Conclusion: Aggregate Impact</h2>
+<p>The <strong>aggregate cost of living</strong> in rural Western Maine increased by approximately <strong>18%</strong> between May 2021 and May 2025. This aligns closely with inflation trends across the Northeast, as reported by the U.S. Bureau of Labor Statistics. Cost increases were led by utilities, groceries, and vehicle maintenance, with housing being the most significant single category. Although rural areas often have lower absolute costs than urban centers, the percentage increase in expenses was substantial.</p>
+
+<footer>
+<p><em>Prepared using data from the U.S. Bureau of Labor Statistics (Consumer Price Index – Northeast Region), Maine energy and economic reports, and national inflation trackers. This summary is intended as a general estimate based on publicly available data.</em></p>
+</footer>
+
 </body>
 </html>
