--- a/maine_cost_of_living_2021_2025.html
+++ b/maine_cost_of_living_2021_2025.html
@@ -60,6 +60,6 @@
 <footer>
 <p><em>Prepared using data from the U.S. Bureau of Labor Statistics (Consumer Price Index – Northeast Region), Maine energy and economic reports, and national inflation trackers. This summary is intended as a general estimate based on publicly available data.</em></p>
 </footer>
-
+<img src="https://counterapi.dev/kingfield-cost" style="display: none;" alt="">
 </body>
 </html>
